<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.uniajc.mvn</groupId>
    <artifactId>practica-mvn-mvc-bd</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <java.version>21</java.version> 
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <javafx.version>21.0.1</javafx.version>
    </properties>

    <dependencies>
        
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.8</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        
    </dependencies>
    <build>
        <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.10</version>
                </plugin>
        </plugins>
    </pluginManagement>
    <plugins>
        

        <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <configuration>
                <mainClass>com.uniajc.mvn.Main</mainClass> 
                <modules>
                    <module>javafx.controls</module>
                    <module>javafx.fxml</module>
                </modules>
                <options>
                    <option>--enable-native-access=ALL-UNNAMED</option>
                    <option>--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
                </options>
            </configuration>
        
       
</plugin>
        </plugins>
    </build>
    </project>